Fixed responsiveness. NYF, margins gaps are large

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,25 @@ html, body {
 div {
 	display: block;
 }
+
+.main-header { 
+	background-color: #FBEF5E;
+	height: 200px;
+	width: 100%;
+	position: relative;
+	float:right;
+	clear:both;
+}
+
 .name {
+float: right;
+margin:0 auto;
+margin-right: 10px;
+
+}
+
+#name-self {
+
 	height; 100%;
 	background-color:black; 
 	color:white; 
@@ -17,30 +35,29 @@ div {
 	float:right;
 	position: absolute;
 	top: 10px;
-	left: 800px;
-	margin-right:50px;
+	text-align:left;
+	clear: both;
 	font-size:60px;
 }
 
-.role-name {
+#name-role {
+
 	background-color:black; 
 	color:white; 
 	font-family:sans-serif;
 	display:inline;
-	float:kk;
+	float:right;
 	font-size:30px;
 	position: relative;
 	top: 130px;
-	left: 800px;
-}
 
+}
 
 .experience-ribbon {
 	position: relative;
 }
 
 .experience-ribbon img {
-	margin-top: 200px;
 }
 
 .name-text {
@@ -49,7 +66,7 @@ font-family: sans-serif;
 }
 .experience-group {
 	margin: 0 auto;
-	margin-top: 80px;
+	margin-top: 290px;
 	width: 600px;
 	height: 300px;
 }
@@ -98,7 +115,6 @@ margin-left:50px;
 }
 
 .project-ribbon img {
-	margin-top: 400px;
 }
 
 .project-group {
@@ -214,16 +230,8 @@ font-family: sans-serif;
 }
 
 
-.main-header { 
-	background-color: #FBEF5E;
-	height: 200px;
-	width: 100%;
-	position: absolute;
-	left: 0;
-	z-index: 100;
-}
-
 .content {
+	width: 100%;
 	height:100%;
 	background: #F38A59;
 }
